# TelegramTestBot

./: CMakeLists.txt  README.md
src/: main.cpp  randomchatbot.cpp  randomchatbot.h
src/chat/: botuser.cpp  botuser.h  messagemanager.cpp  messagemanager.h  virtualroom.cpp  virtualroom.h
src/helper/: localization.cpp  localization.h  stocks.cpp  stocks.h  typedefs.h  useractions.cpp  useractions.h
src/net/: customizablepoll.cpp  customizablepoll.h
src/sql/: sql_exception.cpp  sql_exception.h  sqlwrapper.cpp  sqlwrapper.h
src/timer/: timer.cpp  timer.h  timermanager.cpp  timermanager.h
test/: CMakeLists.txt  TestLocalization.h  TestStocks.h
